plugins {
    id 'org.springframework.boot' version '2.6.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

javafx {
    version = "17.0.1"
    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web']
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'net.rgielen:javafx-weaver-spring-boot-starter:1.3.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation files('libraries/JavaFXSmartGraph-0.9.4.jar')
    implementation 'org.controlsfx:controlsfx:8.0.5'
}

tasks.named('test') {
    useJUnitPlatform()
}
